--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </p>
     </div>
     <div class="mt-10 md:mt-0 md:w-1/2 flex justify-center md:justify-end">
-      <img src="asset/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] h-auto max-h-[60vh] object-cover rounded-2xl shadow-xl transition duration-250 transform hover:scale-105" />
+      <img src="assets/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] h-auto max-h-[60vh] object-cover rounded-2xl shadow-xl transition duration-250 transform hover:scale-105" />
     </div>
   </section>
 
