--- a/index.html
+++ b/index.html
@@ -1,125 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="assets/images/logo.ico" type="image/x-icon">
-  <title>Kunal Chavan | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VocalEyes</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-black text-white dark:bg-black dark:text-white transition-colors duration-300 font-sans">
+<body class="bg-gradient-to-br from-purple-900 via-indigo-700 to-fuchsia-600 text-white min-h-screen">
+  <div class="max-w-6xl mx-auto p-6">
+    <a href="../index.html" class="text-sm text-gray-300 hover:text-white">&larr; Back to Home</a>
 
-  <!-- Navbar -->
-  <nav class="flex justify-between items-center px-6 md:px-16 py-4 border-b border-gray-700">
-    <h1 class="text-2xl font-bold">
-      <a href="index.html" class="hover:text-yellow-400 transition-transform duration-300 hover:scale-105">Kunal Chavan</a>
-    </h1>
-    <ul class="hidden md:flex space-x-8 text-sm uppercase font-semibold">
-      <li><a href="#about" class="hover:text-yellow-400">About</a></li>
-      <li><a href="#projects" class="hover:text-yellow-400">Projects</a></li>
-      <li><a href="#skills" class="hover:text-yellow-400">Skills</a></li>
-      <li><a href="#publications" class="hover:text-yellow-400">Publications</a></li>
-      <li><a href="#certifications" class="hover:text-yellow-400">Certifications</a></li>
-      <li><a href="#contact" class="hover:text-yellow-400">Contact</a></li>
-    </ul>
-    <div class="md:hidden">
-      <button id="menu-btn" class="text-yellow-400 text-3xl">&#9776;</button>
+    <div class="mt-6 text-center">
+      <h1 class="text-4xl font-bold">VocalEyes</h1>
+      <p class="text-gray-300 mt-2">Vision-Language based smart assistant for the visually impaired</p>
     </div>
-  </nav>
 
-  <div id="mobile-menu" class="hidden fixed inset-0 bg-black bg-opacity-95 z-50 p-10 flex flex-col space-y-6 text-lg font-semibold text-center">
-    <button id="close-menu" class="text-yellow-400 text-3xl absolute top-5 right-6">&times;</button>
-    <a href="#about" class="hover:text-yellow-400">About</a>
-    <a href="#projects" class="hover:text-yellow-400">Projects</a>
-    <a href="#skills" class="hover:text-yellow-400">Skills</a>
-    <a href="#publications" class="hover:text-yellow-400">Publications</a>
-    <a href="#certifications" class="hover:text-yellow-400">Certifications</a>
-    <a href="#contact" class="hover:text-yellow-400">Contact</a>
-  </div>
-
-  <!-- Landing Section -->
-  <section class="flex flex-col md:flex-row items-center justify-between px-6 md:px-16 py-20">
-    <div class="w-full md:w-7/12 lg:w-2/3 xl:w-3/4 leading-loose text-lg md:text-xl space-y-6">
-      <h2 class="text-5xl md:text-6xl font-extrabold mb-6 leading-relaxed">
-        AI meets Edge.<br> I turn prototypes into real-world systems.
-      </h2>
-      <p class="text-xl text-gray-300 mb-8">
-        Research Intern @ NUS & IIT Dharwad | ECE @ VIT | Computer Vision | IoT | LLM | AWS
+    <div class="bg-white bg-opacity-10 backdrop-blur-lg text-white rounded-2xl p-6 shadow-lg mt-8">
+      <h2 class="text-2xl font-semibold mb-4">🧠 Project Overview</h2>
+      <p>
+        VocalEyes leverages a fine-tuned Florence-2 Vision-Language Model and YOLO for real-time object detection and distance tracking, generating audio descriptions for visually impaired users.
       </p>
-      <div class="space-x-4 text-lg">
-        <a href="#projects" class="bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition duration-300 transform hover:scale-110 shadow-lg">View Projects</a>
-        <a href="#contact" class="border border-yellow-400 text-yellow-500 hover:bg-yellow-500 hover:text-black px-6 py-3 rounded-full font-semibold transition duration-300 transform hover:scale-110 shadow-lg">Let's Connect</a>
-      </div>
-      <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-8 mt-8 text-lg md:text-2xl">
-        <a href="https://www.linkedin.com/in/kunal-chavan-008524250/" target="_blank" class="hover:text-yellow-400">🔗 LinkedIn</a>
-        <a href="https://github.com/KunalChavan245" target="_blank" class="hover:text-yellow-400">💻 GitHub</a>
-        <a href="mailto:kunalchavan245@gmail.com" target="_blank" class="hover:text-yellow-400">📧 Email</a>
-      </div>
-      <p class="mt-6 italic text-gray-400 text-lg">
-        P.S. From Jetson Nano to LLMs—engineering at the edge and in the cloud!
+      <img src="../assets/vocaleyes-demo.jpg" alt="VocalEyes Demo" class="mt-4 rounded-lg shadow w-full h-auto">
+    </div>
+
+    <div class="bg-white bg-opacity-10 backdrop-blur-lg text-white rounded-2xl p-6 shadow-lg mt-8">
+      <h2 class="text-2xl font-semibold mb-4">🔧 Tech Stack</h2>
+      <ul class="list-disc list-inside space-y-2">
+        <li>YOLOv7 + Depth Estimation</li>
+        <li>Florence-2 Vision-Language Model</li>
+        <li>NVIDIA Jetson Orin Nano</li>
+        <li>Real-time Text-to-Speech (TTS)</li>
+        <li>Python, OpenCV, PyTorch</li>
+      </ul>
+    </div>
+
+    <div class="bg-white bg-opacity-10 backdrop-blur-lg text-white rounded-2xl p-6 shadow-lg mt-8">
+      <h2 class="text-2xl font-semibold mb-4">🎯 Impact</h2>
+      <p>
+        Enables independent navigation and object awareness for blind users. Achieved sub-500ms inference time on edge device.
       </p>
     </div>
-    <div class="mt-10 md:mt-0 md:w-1/2 flex justify-center md:justify-end">
-      <img src="assets/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] h-auto max-h-[60vh] object-cover rounded-2xl shadow-xl transition duration-250 transform hover:scale-105" />
-    </div>
-  </section>
-
-  <!-- Explore Sections -->
-  <section id="about" class="px-6 md:px-16 py-20 bg-black">
-    <h2 class="text-3xl font-bold mb-8 text-center text-yellow-400">Explore My Sections</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="bg-yellow-100 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">1</h3>
-        <h4 class="text-xl font-bold mt-4">About Me</h4>
-        <p class="text-sm mt-4">Background, interests and experience timeline.</p>
-      </div>
-      <div class="bg-blue-200 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">2</h3>
-        <h4 class="text-xl font-bold mt-4">My Projects</h4>
-        <p class="text-sm mt-4">Explore CV, IoT, and LLM apps I've built.</p>
-      </div>
-      <div class="bg-gray-200 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">3</h3>
-        <h4 class="text-xl font-bold mt-4">Skills</h4>
-        <p class="text-sm mt-4">Python, PyTorch, Jetson Nano, LLMs & more.</p>
-      </div>
-      <div class="bg-green-200 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">4</h3>
-        <h4 class="text-xl font-bold mt-4">Publications</h4>
-        <p class="text-sm mt-4">IEEE papers on AIoT and Vision-Language models.</p>
-      </div>
-      <div class="bg-yellow-300 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">5</h3>
-        <h4 class="text-xl font-bold mt-4">Certifications</h4>
-        <p class="text-sm mt-4">AWS, IBM and more professional courses.</p>
-      </div>
-      <div class="bg-yellow-500 p-6 rounded-xl text-black text-center hover:scale-105 transition transform duration-300">
-        <h3 class="text-4xl font-bold">6</h3>
-        <h4 class="text-xl font-bold mt-4">Contact</h4>
-        <p class="text-sm mt-4">Reach out for collaborations or questions.</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="flex justify-center animate-bounce mb-8">
-    <a href="#about" id="scrollDown" class="text-yellow-500 text-3xl hover:scale-110 transition-transform duration-300">↓</a>
   </div>
-
-  <footer class="bg-black text-white py-8 mt-16 text-center">
-    <p>&copy; 2025 Kunal Chavan. All rights reserved.</p>
-  </footer>
-
-  <script>
-    document.getElementById('menu-btn').addEventListener('click', () => {
-      document.getElementById('mobile-menu').classList.remove('hidden');
-    });
-    document.getElementById('close-menu').addEventListener('click', () => {
-      document.getElementById('mobile-menu').classList.add('hidden');
-    });
-    document.getElementById('scrollDown').addEventListener('click', function () {
-      window.scrollBy({ top: window.innerHeight, behavior: 'smooth' });
-    });
-  </script>
 </body>
 </html>
