--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-black text-white dark:bg-black dark:text-white transition-colors duration-300 font-sans">
+<body class="bg-gradient-to-br from-purple-900 via-indigo-800 to-fuchsia-700 text-white min-h-screen">
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center px-6 md:px-16 py-4 border-b border-gray-700">
