--- a/index.html
+++ b/index.html
@@ -9,6 +9,111 @@
 </head>
 
 <body class="bg-gradient-to-br from-purple-900 via-indigo-800 to-fuchsia-700 text-white min-h-screen">
+<!DOCTYPE html>
+<html lang="en" class="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="assets/images/logo.ico" type="image/x-icon">
+  <title>Kunal Chavan | Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+
+<body class="bg-black text-white dark:bg-black dark:text-white transition-colors duration-300 font-sans">
+  <!-- Navbar -->
+  <nav class="flex justify-between items-center px-6 md:px-16 py-4 border-b border-gray-700">
+    <h1 class="text-2xl font-bold">
+      <a href="index.html" class="hover:text-yellow-400 transition-transform duration-300 hover:scale-105">Kunal Chavan</a>
+    </h1>
+    <ul class="hidden md:flex space-x-8 text-sm uppercase font-semibold">
+      <li><a href="#about" class="hover:text-yellow-400">About</a></li>
+      <li><a href="#projects" class="hover:text-yellow-400">Projects</a></li>
+      <li><a href="#skills" class="hover:text-yellow-400">Skills</a></li>
+      <li><a href="#publications" class="hover:text-yellow-400">Publications</a></li>
+      <li><a href="#certifications" class="hover:text-yellow-400">Certifications</a></li>
+      <li><a href="#contact" class="hover:text-yellow-400">Contact</a></li>
+    </ul>
+    <div class="md:hidden">
+      <button id="menu-btn" class="text-yellow-400 text-3xl">&#9776;</button>
+    </div>
+  </nav>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="hidden fixed inset-0 bg-black bg-opacity-95 z-50 p-10 flex flex-col space-y-6 text-lg font-semibold text-center">
+    <button id="close-menu" class="text-yellow-400 text-3xl absolute top-5 right-6">&times;</button>
+    <a href="#about" class="hover:text-yellow-400">About</a>
+    <a href="#projects" class="hover:text-yellow-400">Projects</a>
+    <a href="#skills" class="hover:text-yellow-400">Skills</a>
+    <a href="#publications" class="hover:text-yellow-400">Publications</a>
+    <a href="#certifications" class="hover:text-yellow-400">Certifications</a>
+    <a href="#contact" class="hover:text-yellow-400">Contact</a>
+  </div>
+
+  <!-- Landing Section -->
+  <section class="flex flex-col md:flex-row items-center justify-between px-6 md:px-16 py-20">
+    <div class="w-full md:w-7/12 lg:w-2/3 xl:w-3/4 leading-loose text-lg md:text-xl space-y-6">
+      <h2 class="text-5xl md:text-6xl font-extrabold mb-6 leading-relaxed">
+        AI meets Edge.<br> I turn prototypes into real-world systems.
+      </h2>
+      <p class="text-xl text-gray-300 mb-8">
+        Research Intern @ NUS & IIT Dharwad | ECE @ VIT | Computer Vision | IoT | LLM | AWS
+      </p>
+      <div class="space-x-4 text-lg">
+        <a href="#projects" class="bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition duration-300 transform hover:scale-110 shadow-lg">View Projects</a>
+        <a href="#contact" class="border border-yellow-400 text-yellow-500 hover:bg-yellow-500 hover:text-black px-6 py-3 rounded-full font-semibold transition duration-300 transform hover:scale-110 shadow-lg">Let's Connect</a>
+      </div>
+      <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-8 mt-8 text-lg md:text-2xl">
+        <a href="https://www.linkedin.com/in/kunal-chavan-008524250/" target="_blank" class="hover:text-yellow-400">🔗 LinkedIn</a>
+        <a href="https://github.com/KunalChavan245" target="_blank" class="hover:text-yellow-400">💻 GitHub</a>
+        <a href="mailto:kunalchavan245@gmail.com" target="_blank" class="hover:text-yellow-400">📧 Email</a>
+      </div>
+      <p class="mt-6 italic text-gray-400 text-lg">
+        P.S. From Jetson Nano to LLMs—engineering at the edge and in the cloud!
+      </p>
+    </div>
+    <div class="mt-10 md:mt-0 md:w-1/2 flex justify-center md:justify-end">
+      <img src="assets/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] h-auto max-h-[60vh] object-cover rounded-2xl shadow-xl transition duration-250 transform hover:scale-105" />
+    </div>
+  </section>
+
+  <!-- Project Cards Section -->
+  <section id="projects" class="px-6 md:px-16 py-20 bg-black">
+    <h2 class="text-3xl font-bold mb-8 text-center text-yellow-400">Projects</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <a href="projects/night-vision-object-detection.html" class="bg-blue-200 p-6 rounded-xl shadow-xl text-center text-black transform hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold">Night Vision Detection</h3>
+        <p class="mt-2 text-sm">YOLO on Raspberry Pi with IR for safety.</p>
+      </a>
+      <a href="projects/vocaleyes.html" class="bg-green-200 p-6 rounded-xl shadow-xl text-center text-black transform hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold">VocalEyes</h3>
+        <p class="mt-2 text-sm">Smart assistant for the visually impaired.</p>
+      </a>
+      <a href="projects/anomaly-detection-iot.html" class="bg-red-200 p-6 rounded-xl shadow-xl text-center text-black transform hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold">Anomaly Detection</h3>
+        <p class="mt-2 text-sm">ML-based intrusion detection for IoT.</p>
+      </a>
+      <a href="projects/email-generator-llama.html" class="bg-yellow-300 p-6 rounded-xl shadow-xl text-center text-black transform hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold">Email Generator</h3>
+        <p class="mt-2 text-sm">LLAMA-2 powered professional email assistant.</p>
+      </a>
+    </div>
+  </section>
+
+  <!-- Footer & Scripts -->
+  <footer class="bg-black text-white py-8 mt-16 text-center">
+    <p>&copy; 2025 Kunal Chavan. All rights reserved.</p>
+  </footer>
+
+  <script>
+    document.getElementById('menu-btn').addEventListener('click', () => {
+      document.getElementById('mobile-menu').classList.remove('hidden');
+    });
+    document.getElementById('close-menu').addEventListener('click', () => {
+      document.getElementById('mobile-menu').classList.add('hidden');
+    });
+  </script>
+</body>
+</html>
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center px-6 md:px-16 py-4 border-b border-gray-700">
