--- a/main-sections/project.html
+++ b/main-sections/project.html
@@ -22,12 +22,12 @@
         <p class="mt-2 text-gray-200">YOLOv5-8 based low-light vehicle detection with IR camera on Raspberry Pi 5.</p>
       </a>
 
-      <a href="../projects/vocaleyes.html" class="bg-gradient-to-br from-green-600 to-teal-700 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
+      <a href="../projects/vocal-eyes.html" class="bg-gradient-to-br from-green-600 to-teal-700 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
         <h2 class="text-2xl font-bold">🧠 VocalEyes</h2>
         <p class="mt-2 text-gray-200">Vision-Language powered assistant for visually impaired using Jetson Orin Nano.</p>
       </a>
 
-      <a href="../projects/anomaly-detection-iot.html" class="bg-gradient-to-br from-red-600 to-pink-600 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
+      <a href="../projects/anomoly.html" class="bg-gradient-to-br from-red-600 to-pink-600 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
         <h2 class="text-2xl font-bold">📶 Anomaly Detection</h2>
         <p class="mt-2 text-gray-200">Real-time intrusion detection system for IoT devices using ensemble learning.</p>
       </a>
