--- a/main-sections/project.html
+++ b/main-sections/project.html
@@ -27,7 +27,7 @@
         <p class="mt-2 text-gray-200">Vision-Language powered assistant for visually impaired using Jetson Orin Nano.</p>
       </a>
 
-      <a href="../projects/anomoly.html" class="bg-gradient-to-br from-red-600 to-pink-600 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
+      <a href="../projects/anamoly.html" class="bg-gradient-to-br from-red-600 to-pink-600 rounded-2xl p-6 shadow-lg hover:scale-105 transform transition">
         <h2 class="text-2xl font-bold">📶 Anomaly Detection</h2>
         <p class="mt-2 text-gray-200">Real-time intrusion detection system for IoT devices using ensemble learning.</p>
       </a>
