--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Image -->
     <div class="mt-10 md:mt-0 md:w-1/2 flex justify-center md:justify-end">
-      <img src="assets/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] max-h-[60vh] object-cover rounded-2xl shadow-xl hover:scale-105 transition duration-250">
+      <img src="asset/images.jpeg" alt="Kunal Chavan" class="w-full md:w-[40rem] max-h-[60vh] object-cover rounded-2xl shadow-xl hover:scale-105 transition duration-250">
     </div>
   </section>
 
