--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 
       <!-- Contact -->
       <div class="bg-yellow-600 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">6</h3>
-        <h4 class="text-xl font-bold mt-4">Contact</h4>
+        <h3 class="text-4xl font-bold">Contact</h3>
         <p class="text-sm mt-4">Let’s collaborate or connect!</p>
         <a href="main-sections/contact.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
