--- a/index.html
+++ b/index.html
@@ -78,40 +78,35 @@
 
       <!-- About -->
       <div class="bg-red-200 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">1</h3>
-        <h4 class="text-xl font-bold mt-4">About Me</h4>
+        <h3 class="text-4xl font-bold">About Me</h3>
         <p class="text-sm mt-4">Learn about my academic background and interests.</p>
         <a href="main-sections/about.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
 
       <!-- Projects -->
       <div class="bg-blue-200 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">2</h3>
-        <h4 class="text-xl font-bold mt-4">Projects</h4>
+        <h3 class="text-4xl font-bold">Projects</h3>
         <p class="text-sm mt-4">See my AI, CV, and IoT projects.</p>
         <a href="main-sections/project.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
 
       <!-- Skills -->
       <div class="bg-gray-100 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">3</h3>
-        <h4 class="text-xl font-bold mt-4">Skills</h4>
+        <h3 class="text-4xl font-bold">Skills</h3>
         <p class="text-sm mt-4">Explore the tools and tech I work with.</p>
         <a href="main-sections/skills.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
 
       <!-- Research -->
       <div class="bg-red-500 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">4</h3>
-        <h4 class="text-xl font-bold mt-4">Research</h4>
+        <h3 class="text-4xl font-bold">Research</h3>
         <p class="text-sm mt-4">Check out my IEEE and academic publications.</p>
         <a href="main-sections/research.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
 
       <!-- Certifications -->
       <div class="bg-yellow-400 p-6 rounded-xl text-black text-center shadow-xl hover:scale-105 transition duration-300">
-        <h3 class="text-4xl font-bold">5</h3>
-        <h4 class="text-xl font-bold mt-4">Certifications</h4>
+        <h3 class="text-4xl font-bold">Certifications</h3>
         <p class="text-sm mt-4">Explore my credentials and badges.</p>
         <a href="main-sections/certification.html" class="mt-4 inline-block font-semibold hover:underline">View Page</a>
       </div>
