--- a/main-sections/about.html
+++ b/main-sections/about.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="mt-12 text-center">
-      <a href="../assets/Kunal_Chavan_Resume.pdf" class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition transform hover:scale-105">Download Resume</a>
+      <a href="../asset/asset/Updated_Resume (1).pdf" class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition transform hover:scale-105">Download Resume</a>
     </div>
   </div>
 </body>
