--- a/main-sections/about.html
+++ b/main-sections/about.html
@@ -35,7 +35,11 @@
     </div>
 
     <div class="mt-12 text-center">
-      <a href="https://github.com/KunalChavan245/kunalchavan245.github.io/blob/main/asset/Updated_Resume.pdf" class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition transform hover:scale-105">Download Resume</a>
+      <a href="https://github.com/KunalChavan245/kunalchavan245.github.io/raw/main/asset/Updated_Resume.pdf" 
+         download 
+         class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black px-6 py-3 rounded-full font-semibold transition transform hover:scale-105">
+         Download Resume
+      </a>
     </div>
   </div>
 </body>
